リンクアイコン削除apiの実装
