# src/docs/openapi.yml
@@ -260,7 +260,62 @@ paths:
         '500':
           description: Internal server error
   # 詳細のリンクアイコンの作成
-  /detail/linkIcon/{projectId}:
+  /detail/linkIcon:
+    delete:
+      tags:
+        - LinkIcon
+      operationId: deleteLinkIcon
+      summary: 特定のリンクアイコンを削除する
+      description: プロジェクトのリンクアイコンリストから指定されたリンクアイコンを削除します。
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - projectId
+                - uuid
+              properties:
+                projectId:
+                  type: string
+                  description: プロジェクトのID
+                uuid:
+                  type: string
+                  description: 削除するリンクアイコンのUUID
+      responses:
+        '200':
+          description: リンクアイコンを正常に削除しました。
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: リンクアイコンを正常に削除しました。
+                  data:
+                    $ref: '#/components/schemas/LinkIcon'
+        '404':
+          description: 指定された projectId または uuid のリンクアイコンが見つかりません。
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: 指定された uuid のリンクアイコンが見つかりません。
+        '500':
+          description: サーバー内部エラー
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: エラーメッセージの詳細
     post:
       tags:
         - LinkIcon
